unpackaged/objects/Visit__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Beat_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Beat Plan</label>
        <referenceTo>Beat_Plan__c</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cash_Recieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cash Recieved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckIn_Time__c</fullName>
        <label>CheckIn Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>CheckIn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckIn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckOut_Time__c</fullName>
        <label>CheckOut Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>CheckOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckOut</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateTime__c</fullName>
        <formula>DATETIMEVALUE( TEXT( YEAR( Visit_Date__c ) )+&quot;-&quot; + TEXT(MONTH(Visit_Date__c ))+&quot;-&quot; +TEXT(DAY( Visit_Date__c ))+&quot; &quot;+TEXT(VALUE(LEFT(TEXT(Visit_Time__c) , 2)) - 5)+ MID(TEXT( Visit_Time__c ),3,3)+&quot;:00&quot;  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Document_Recieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Document Recieved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Request</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unassigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unassigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visit_Cancel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visit Cancel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visit_Date__c</fullName>
        <label>Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visit_Latitude__c</fullName>
        <formula>IF(  NOT(ISBLANK( Lead__c )) ,Lead__r.Lead_Latitude__c , Account__r.Account_Latitude__c )</formula>
        <label>Visit Latitude</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visit_Longitude__c</fullName>
        <formula>IF( NOT(ISBLANK( Lead__c )) ,Lead__r.Lead_Longitude__c ,  Account__r.Account_Longitude__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Longitude</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visit_Time__c</fullName>
        <label>Visit Time</label>
        <type>Time</type>
    </fields>
    <label>Visit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>V-{0000}</displayFormat>
        <label>Visit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>